endorsed-mechanismus eingebaut